--- a/Bootstrap/index.html
+++ b/Bootstrap/index.html
@@ -65,7 +65,7 @@
         <div class="row mt-5">
             <div class="col-sm">
                 <div class="card">
-                    <img src="images/panther.jfif" alt="">
+                    <img src="images/crocodile.jpeg" alt="">
                     <div class="card-body p-4 rounded-bottom">
                         <h5 class="card-title fw-bold">Card title</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
@@ -75,7 +75,7 @@
             </div>
             <div class="col-sm">
                 <div class="card">
-                    <img src="images/panther.jfif" alt="">
+                     <a href=""><img src="images/dolphine.jpeg" alt=""></a> 
                     <div class="card-body p-4 rounded-bottom">
                         <h5 class="card-title fw-bold">Card title</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
@@ -85,7 +85,7 @@
             </div>
             <div class="col-sm">
                 <div class="card">
-                    <img src="images/panther.jfif" alt="">
+                    <img src="images/hippo.jpeg" alt="">
                     <div class="card-body p-4 rounded-bottom">
                         <h5 class="card-title fw-bold">Card title</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
